# RemoteWateringSystem

./: Cargo.toml  index.html  netlify.toml
backend/: Cargo.toml
backend/scripts/: setup.sh  update.sh
backend/src/: main.rs
src/: main.rs
