[package]
name = "watering-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# GPIO制御 (Raspberry Piでのみ必要)
rppal = { version = "0.18", optional = true }

[features]
default = []
gpio = ["rppal"]

[profile.release]
opt-level = 3
lto = true


